# qj_bidask

./: .gitignore  MAINTAINERS.md  MANIFEST.in  README.md  VERSION_MANAGEMENT.md  build_and_upload.py  config.yaml  inspect_wheel.py  o.py  pyproject.toml  requirements-dev.txt  test_bidask.py
.github/workflows/: test.yml
data/: fetch.py
examples/: animated_spread_monitor.py  basic_spread_estimation.py  crypto_spread_comparison.py  liquidity_risk_monitor.py  realtime_spread_monitor.py  realtime_spread_monitor.py_old  spread_estimator.py  stock_liquidity_risk.py  threshold_alert_monitor.py  websocket_realtime_demo.py
quantjourney_bidask/: __init__.py  _version.py
tests/: test_data_fetcher.py  test_edge.py  test_edge_expanding.py  test_edge_rolling.py  test_estimators.py
